Fix comparing nodes
Fix broken init in lab when loading existing tool run
Allow clicking node anywhere instead of just header

--- a/app-frontend/src/assets/styles/sass/_shame.scss
+++ b/app-frontend/src/assets/styles/sass/_shame.scss
@@ -1464,6 +1464,14 @@ rf-export-item {
   position: relative;
 }
 
+.is-comparing {
+    .diagram-cell {
+        * {
+            pointer-events: none;
+        }
+    }
+}
+
 .diagram-cell {
   position: absolute;
   background: white;
